FIXED: submenu aligned on desktop version

--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ div.menu.fixMe {
     }
 
     .subMenu a {
-        padding-left: .6em;
+        padding-left: 20px;
         padding-top: .3em;
         display: block;
     }
@@ -1328,6 +1328,12 @@ div.menu.fixMe {
     }
     .lan {
         padding-left: .37em
+    }
+
+    .subMenu a {
+        padding-left: 2vw;
+        padding-top: .3em;
+        display: block;
     }
 
     /*footer*/
